<resources>
    <string name="app_name">Workman</string>
    <string name="home">홈</string>
    <string name="schedule">근무일정</string>
    <string name="time">출퇴근</string>
    <string name="alarm">알람</string>
    <string name="menu">더보기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    회사 만들기창에서 인원수를 정하는 스피너 아이템 리스트   -->
    <string-array name="Number_of_people">
        <item>1 - 20</item>  <!-- 회사 총 인원이 1명에서 20명 -->
        <item>21 - 50</item> <!-- 회사 총 인원이 21명에서 50명 -->
        <item>51 - 100</item> <!-- 회사 총 인원이 51명에서 100명 -->
        <item>101 - 300</item> <!-- 회사 총 인원이 101명에서 300명 -->
        <item>301 - 500</item> <!-- 회사 총 인원이 301명에서 500명 -->
        <item>501 ~ </item> <!-- 회사 총 인원이 501명 이상  -->
    </string-array>

    <!--   근무조에 따라서 알람을 울리게 하는 아이템 리스트  -->
    <string-array name="Working_hours_alarm">
        <item>근무 30분 전에 울림</item>
        <item>근무 1시간 전에 울림</item>
        <item>근무 1시간 반 전에 울림</item>
        <item>근무 2시간 전에 울림</item>
    </string-array>
    <string name="invite">초대하기</string>
    <string name="going_to_work">출근하기</string>
    <string name="going_home">퇴근하기</string>
    <string name="name">이름</string>
    <string name="position">직책</string>
    <string name="group">그룹</string>
    <string name="phone_number">전화번호</string>
    <string name="memo">메모</string>
    <string name="etc">* 입력한 전화번호로 초대 메시지가 갑니다.</string>
    <string name="invite_employee">직원 초대</string>
    <string name="send">보내기</string>
    <string name="date">날짜</string>
    <string name="day">요일</string>
    <string name="time_record">출퇴근기록</string>
    <string name="time_request">출퇴근기록 수정 요청</string>
    <string name="request">요청</string>
    <string name="selection">선택</string>

    <string-array name="vacationtype">
        <item>연차</item>
        <item>반차</item>
        <item>병가</item>
    </string-array>

    <string-array name="personnel">
        <item>1~10</item>
        <item>11~30</item>
        <item>31~60</item>
        <item>61~100</item>
        <item>101~</item>
    </string-array>

    <string-array name="position">
        <item>중간 관리자</item>
        <item>직원</item>
        <item>임시 직원</item>
    </string-array>

</resources>
